style.css
/* ... */
@media screen and (min-width: 700px) {
  #gem-logo {
    position: relative;
    top: 0;
    left: 500px;
    width: 28vw;
    margin-bottom: 0px;
    margin-right: 24px;
    -webkit-animation: slide-title 1s ease-out;
            animation: slide-title 1s ease-out;
    -webkit-animation-fill-mode: forwards;
            animation-fill-mode: forwards;
    -webkit-animation-delay: 2s;
            animation-delay: 2s; } }

/* -----------Site Branding/Site Description Text ------------*/
@media screen and (min-width: 700px) {
  .has-header-image.twentyseventeen-front-page .site-branding {
    padding-top: calc(33vh - 77px);
    padding-bottom: calc(33vh + 77px); } }

.site-title {
  display: none; }

body:not(.title-tagline-hidden) .site-branding-text {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center; }

body.has-header-image .site-description, body.has-header-video .site-description {
  color: #fff;
  font-size: 3vw;
  position: relative;
  font-weight: 300;
  text-align: center;
  padding: 0em 2em 1em 2em;
  opacity: 1; }

@media screen and (min-width: 700px) {
  body.has-header-image .site-description, body.has-header-video .site-description {
    font-size: 24px;
    text-align: left;
    padding: 0em 0em 0em .8em; } }

@media screen and (min-width: 1000px) {
  .search-and-title-container {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 80px 1fr;
    margin: 0px auto;
    width: 90vw;
    max-width: 1000px; } }

/*-----------------------------------------------------------------------------
2.0 Main Navigation Menu
-----------------------------------------------------------------------------*/
.navigation-top {
  z-index: 3;
  position: absolute;
  bottom: 0;
  width: 100%; }

/* Menu logo: opacity 0 until nav menu sticky at top of window */
.logo-container {
  opacity: 0;
  min-width: 46px;
  position: absolute;
  left: 122px;
  -webkit-transition: opacity 0.5s linear;
  transition: opacity 0.5s linear;
  /* padding-right: 12px; */
  top: 14px; }

@media screen and (min-width: 56em) {
  .site-navigation-fixed .logo-container {
    opacity: 1; } }

#menu-logo {
  width: 38px; }

/*----------Main Navigation Styles----------*/
ul#top-menu {
  text-align: center; }

ul#top-menu a {
  color: #86aa49;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s; }

ul#top-menu a:hover {
  opacity: 0.5;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s; }

.icon {
  fill: #86aa49; }

.icon:hover {
  fill: #C8F265; }

/*-----------------------------------------------------------------------------
3.0 Front Page Content
-----------------------------------------------------------------------------*/
.home header.entry-header {
  display: none; }

h1.page-title, h2.widget-title {
  color: #86aa49; }

h2.entry-title {
  display: none; }

.entry-content-front-page {
  margin-bottom: 3em;
  text-align: center; }

.front-page-container a, .front-page-container a h3 {
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s; }

.front-page-container a:hover, .front-page-container a h3:hover {
  opacity: 0.5;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s; }

/*----------First Section----------*/
.front-page-container {
  text-align: center;
  margin-bottom: 3em; }

@media screen and (min-width: 48em) {
  .front-page-container {
    grid-column-start: 1;
    grid-column-end: 6;
    grid-template-columns: .5fr 1fr 1fr 1fr .5fr; } }

.front-page-container h2 {
  line-height: 1.6em;
  grid-column-start: 2;
  grid-column-end: 5;
  font-weight: 400; }

/*----------Circles Section----------*/
.front-page-container + div {
  grid-column-start: 2; }

.front-page-article {
  padding: 4em;
  padding-top: 1em;
  padding-bottom: 1em; }

.front-page-article img {
  height: auto;
  width: 14vw;
  max-width: 20vw;
  min-width: 191px; }

.front-page-article img:hover, .front-page-article h2:hover, .front-page-article p:hover {
  opacity: .5;
  -webkit-transition: opacity .2s ease;
  transition: opacity .2s ease; }

.front-page-article a h2 {
  margin-top: 1em; }

#section-4 {
  grid-column-start: 2; }

/*----------Donate Section----------*/
div#section-7 {
  background: #86aa49;
  margin-bottom: 3em; }

@media screen and (min-width: 56em) {
  div#section-7 {
    padding: 8em 16em 8em 16em; } }

#section-7 h2 {
  color: #fff;
  font-size: 23vw;
  text-align: center;
  text-transform: uppercase;
  margin-bottom: 0px; }

@media screen and (min-width: 56em) {
  #section-7 h2 {
    font-size: 9em;
    margin-bottom: .2em; } }

a.fasc-button.fasc-size-xlarge.fasc-type-flat.fasc-rounded-medium.fasc-style-bold {
  border: 3px solid; }

/*----------Instagram Section----------*/
div#section-8 {
  padding-bottom: 3em; }

.sbi_header_img img {
  min-width: 0px; }

@media screen and (min-width: 56em) {
  .sbi_header_img img {
    min-width: 0px; } }

/* Clear Twenty Seventeen Floats */
/* @media screen and (min-width: 56em) {
  body:not(.has-sidebar):not(.page-one-column) .page-header, body.has-sidebar.error404 #primary .page-header, body.page-two-column:not(.archive) #primary .entry-header, body.page-two-column.archive:not(.has-sidebar) #primary .page-header {
    float: none;
    width: 100%;
    text-align: center;
  }
} */
/* @media screen and (min-width: 56em) {
  .panel-content .wrap {
      padding-bottom: 4.5em;
      padding-top: 0em;
  }
} */
/*-----------------------------------------------------------------------------
3.0 Footer
-----------------------------------------------------------------------------*/
footer#colophon {
  background-color: #414042;
  margin-top: -1px; }

.site-footer a {
  color: #fff;
  text-decoration: none; }

/*----------Links Widget----------*/
.site-footer .widget-area {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  padding-bottom: 0em;
  padding-top: 2em; }
/* ... */

